# fastapi-tests

./: .env  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/: alembic.ini  main.py  settings.py
backend/src/api/chat/: router.py  schemas.py
backend/src/api/files/: router.py
backend/src/core/chat/: manager.py
backend/src/core/files/: services.py
backend/src/infrastructure/database/: database.py
backend/src/infrastructure/s3/: client.py
frontend/: Dockerfile  vite.config.ts
frontend/src/: App.tsx  ChatApp.tsx
src/: alembic.ini  main.py  settings.py
src/migrations/: env.py
