[project]
name = "fastapi-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "ruff>=0.15.4",
    "sqlalchemy>=2.0.47",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
src = ["src"]
exclude = [
    "migrations",
]

[tool.ruff.lint]
preview = true
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "S",
    "BLE",
    "T20",
    "T10",
    "PT",
    "RUF",
    "DTZ",
    "ERA",
    "FURB",
    "Q",
]
ignore = [
    "C408",
    "RUF001",
    "RUF002",
    "RUF003",
    "S110",

]
fixable = [
    "I",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"src/**/*.py" = ["B008"]
"src/tests/**/*.py" = ["S101"]
"src/tests/*.py" = ["S106", "S107"]
